[project]
name = "hava"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.9.1",
    "ruff>=0.12.0",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.34.3",
]
