[project]
name = "hava"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.9.1",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "ruff>=0.12.0",
    "sqlalchemy>=2.0.41",
    "typer>=0.16.0",
    "uvicorn[standard]>=0.34.3",
]
